[gd_scene load_steps=5 format=3 uid="uid://dic2fshrenmrv"]

[ext_resource type="Theme" uid="uid://y7aot7vogdr6" path="res://src/Themes/MainTheme.tres" id="1_4xrcx"]
[ext_resource type="Script" path="res://src/MainMenu/MenuButton.gd" id="1_ctsd2"]
[ext_resource type="Script" path="res://src/GameBoard/MainContainer.gd" id="2_xnhqe"]
[ext_resource type="Texture2D" uid="uid://nskki1s0pkew" path="res://assets/backgrounds/wp10493975-grunge-texture-wallpapers.jpg" id="3_rk3ij"]

[node name="MainMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_4xrcx")
script = ExtResource("2_xnhqe")

[node name="Control" type="Control" parent="."]
show_behind_parent = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_xnhqe")

[node name="TableBG" type="TextureRect" parent="Control"]
show_behind_parent = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rk3ij")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -49.0
offset_right = 150.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeckBuilder" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Deck Builder"
script = ExtResource("1_ctsd2")

[node name="PlayMulti" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Join Queue"
script = ExtResource("1_ctsd2")

[node name="PlayAI" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Solitaire"
script = ExtResource("1_ctsd2")

[node name="PlayTest" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Test Queue"
script = ExtResource("1_ctsd2")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 600)
ok_button_text = "Open"
file_mode = 0
access = 1

[connection signal="pressed" from="VBoxContainer/DeckBuilder" to="VBoxContainer/DeckBuilder" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayMulti" to="VBoxContainer/PlayMulti" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayAI" to="VBoxContainer/PlayAI" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayTest" to="VBoxContainer/PlayTest" method="_on_pressed"]
[connection signal="file_selected" from="FileDialog" to="VBoxContainer/PlayMulti" method="_on_file_dialog_file_selected"]
